fixed overflow issue

--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-x:hidden;
+   
 }
 
 html{
@@ -17,10 +17,12 @@ a{
     cursor: pointer;
     
 }
+
 a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: inherit;
 }
+
 p{
     text-align: left;
     font-size: 1.2rem;
